--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,22 @@
-@import "tailwindcss";
+@import 'https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Kode+Mono:wght@400..700&display=swap';
+
+@import 'tailwindcss';
 
 @plugin "tailwindcss-animate";
 
 @custom-variant dark (&:is(.dark *));
 
+/* font-normal: 400
+  font-bold: 700 */
+  /* Font-header: font-5xl */
+
 @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
+    --font-corben: 'Corben', serif;
+    --font-header: font-size:var(--text-[3.625rem]);
+    --font-subHeader: font-size:var(--text-[1.6875rem]);
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
@@ -30,7 +39,7 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem
+    --radius: 0.5rem;
   }
 
   .dark {
@@ -57,7 +66,7 @@
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%
+    --chart-5: 340 75% 55%;
   }
 }
 
